# PerpetualCalendarUnit

./: README.md
firm/BinaryFiles/: LcdCalendar_241012_v1.0.uf2  LcdCalendar_241030_v1.1.uf2  LcdCalendar_260129_v1.2.uf2
firm/LcdCalendar/: CMakeLists.txt  LcdCalendar.c  LcdCalendar.h  LcdSt7302.c  LcdSt7302.h  calendar.c  calendar.h  pico_sdk_import.cmake  rtc_sd30XX.c  rtc_sd30XX.h  soft_spi.c  soft_spi.h  ugui_config.h
pcb/: fp-lib-table  pc-cache.lib  pc.bak  pc.csv  pc.dsn  pc.kicad_pcb  pc.kicad_pcb-bak  pc.pro  pc.rules  pc.sch  pc.sch-bak  pc.ses  pc_back.kicad_pcb  pc_back.kicad_pcb-bak  pc_front.kicad_pcb  pc_front.kicad_pcb-bak  sym-lib-table
pcb/GERBER/: pc-B_Cu.gbr  pc-B_Mask.gbr  pc-B_Paste.gbr  pc-B_SilkS.gbr  pc-Edge_Cuts.gbr  pc-F_Cu.gbr  pc-F_Mask.gbr  pc-F_Paste.gbr  pc-F_SilkS.gbr  pc-all-pos.csv  pc.drl
pcb/GERBER_BACK/: pc_back-B_Cu.gbr  pc_back-B_Mask.gbr  pc_back-B_Paste.gbr  pc_back-B_SilkS.gbr  pc_back-Edge_Cuts.gbr  pc_back-F_Cu.gbr  pc_back-F_Mask.gbr  pc_back-F_Paste.gbr  pc_back-F_SilkS.gbr  pc_back.drl
pcb/GERBER_FRONT/: pc_front-B_Cu.gbr  pc_front-B_Mask.gbr  pc_front-B_Paste.gbr  pc_front-B_SilkS.gbr  pc_front-Edge_Cuts.gbr  pc_front-F_Cu.gbr  pc_front-F_Mask.gbr  pc_front-F_Paste.gbr  pc_front-F_SilkS.gbr  pc_front.drl
pcb/footprint/24pin0.8mm.pretty/: 24pin0.8mm.kicad_mod
pcb/footprint/AABATTERYCLIP.pretty/: AABatteryClip.kicad_mod
pcb/footprint/IC.pretty/: XC6194BANNER-G.kicad_sym  XC6194BANNER-G.mod  XC6194BANNERG.kicad_mod  XC9145B33CER-G.kicad_sym  XC9145B33CER-G.mod  (+1 more)
pcb/parts/: XC6194BANNER-G.dcm  XC6194BANNER-G.lib  XC9145B33CER-G.dcm  XC9145B33CER-G.lib
(+1 files in other folders)
